--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                         data-position="top center" @click="update"><i
                         class="save alternate outline icon"></i></button>
                 <button v-if="selectedFile" class="ui compact primary icon button ml-1" data-tooltip="刷新文件"
-                        data-position="top center" @click="update"><i
+                        data-position="top center" @click="loadFile(true)"><i
                         class="sync alternate icon"></i></button>
                 <button v-if="selectedFile"
                         class="ui compact negative icon button ml-1" data-tooltip="删除文件" data-position="top center"
