--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
 
 <div id="page-files" class="vapp-tpl">
     <div class="mt-header d-sm-flex ui" style="height:99vh">
-        <button v-if="!showTree" class="ui icon button green" title="显示文件树"style="height: 3rem" @click="showTree=!showTree">
+        <button v-if="!showTree" class="ui icon button green" title="显示文件树" style="height: 3rem"
+                @click="showTree=!showTree">
             <i class="arrow right icon"></i>
         </button>
         <div class="ui vertical menu p-1 m-0 file-tree overflow-auto" style="min-width:240px;" v-show="showTree">
