--- a/wyd2021/index.html
+++ b/wyd2021/index.html
@@ -21,6 +21,6 @@
     <div id="root"></div>
 </div>
 
-<script src="/cdn/require.min.js" data-main="libs/main"></script>
+<script src="/cdn/require.min.js" data-main="main"></script>
 </body>
 </html>
