--- a/pages/bookmarks.html
+++ b/pages/bookmarks.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/jpeg" sizes="80x80" href="imgs/logo.jpg" />
+    <link rel="icon" type="image/jpeg" sizes="80x80" href="../imgs/logo.jpg" />
     <title>书签导航页</title>
     <style type="text/css">
         .custom-control-input,
