--- a/index.html
+++ b/index.html
@@ -8,22 +8,18 @@
 </head>
 <body>
 
-<div id="app-leftMenu" class="ui sidebar left vertical inverted fixed menu p-2">
+<div id="app-leftMenu"
+     class="ui sidebar bottom vertical inverted fixed menu p-2 d-sm-flex flex-row flex-wrap wyd-bottom-menu">
     <a class="item" v-for="lv1Menu in level1Menus" @click="itemClick(lv1Menu[1])">
-        <i class="large" :class="lv1Menu[2]"></i> {{lv1Menu[0]}}
+        <i class="large" :class="lv1Menu[2]"></i>
+        <span>{{lv1Menu[0]}}</span>
     </a>
-    <div class="item" v-for="lv2Menu in level2Menus">
-        <i class="icon" :class="lv2Menu.icon"></i>
-        <div class="header">{{lv2Menu.title}}</div>
-        <div class="menu">
-            <template v-for="lv2Link in lv2Menu.children">
-                <div v-if="typeof lv2Link==='string'" class="header">{{lv2Link}}</div>
-                <a v-else class="item" @click="itemClick(lv2Link[1])">
-                    <p>{{lv2Link[0]}}</p>
-                </a>
-            </template>
-        </div>
-    </div>
+    <template v-for="lv2Menu in level2Menus">
+        <a v-for="lv2Link in lv2Menu.children" class="item" @click="itemClick(lv2Link[1])">
+            <i class="icon" :class="lv2Link[2]?lv2Link[2]:'html5'"></i>
+            <span>{{lv2Link[0]}}</span>
+        </a>
+    </template>
 
     <!-- 清空所有缓存 -->
     <a class="item" @click="clearCache">
