--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <div id="app-leftMenu"
      class="ui sidebar bottom vertical inverted fixed menu p-2 d-sm-flex flex-row flex-wrap wyd-bottom-menu">
+    <a class="item" @click="toggle">
+        <i class="icon arrow alternate circle up outline large"></i> 返回
+    </a>
     <a class="item" v-for="lv1Menu in level1Menus" @click="itemClick(lv1Menu[1])">
         <i class="large" :class="lv1Menu[2]"></i>
         <span>{{lv1Menu[0]}}</span>
