--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div id="app-leftMenu"
-     class="ui sidebar bottom vertical inverted fixed menu p-2 d-sm-flex flex-row flex-wrap wyd-bottom-menu">
+     class="ui sidebar bottom vertical inverted fixed menu p-2 d-flex flex-row flex-wrap wyd-bottom-menu">
     <a class="item" @click="toggle">
         <i class="icon arrow alternate circle up outline large"></i> 返回
     </a>
