--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 <div id="root"></div>
 
-<script src="/cdn/require.min.js" data-main="libs/main"></script>
+<script src="/cdn/require.min.js" data-main="libs/main-min"></script>
 </body>
 </html>
