--- a/wyd.html
+++ b/wyd.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/jpeg" sizes="80x80" href="/imgs/logo.jpg" />
     <title>Hello</title>
 </head>
+
 <body>
     <div id="app"></div>
     <script src="/cdn/vue/vue.min.js"></script>
@@ -18,6 +19,19 @@
         let storageKey = `webdata#${runFile}`;
         let webCache = localStorage.getItem(storageKey);
         document.title = filename;
+
+        let gitee = {
+            loadFile(runFile, call) {
+                fetch(`https://gitee.com/api/v5/repos/yanhui1993/webdata/contents/${runFile}`)
+                    .then(res => res.json())
+                    .then(data => {
+                        let content = data.content;
+                        content && localStorage.setItem(storageKey, base64.decode(content));
+                        call && call(content);
+                    });
+            }
+        }
+
         if (webCache) {
             let localKey = `webdata#@${runFile}`;
             let localCache = localStorage.getItem(localKey);
@@ -32,12 +46,15 @@
                     start(content);
                 });
         }
+
         function start(data) {
             let script = document.createElement('script');
             script.type = 'text/javascript';
             script.append(data);
             document.body.appendChild(script);
         }
+
+
 
     </script>
 
