--- a/preview.html
+++ b/preview.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/jpeg" sizes="80x80" href="/imgs/logo.jpg" />
-    <title>Hello</title>
+    <title>Preview Page</title>
 </head>
 
 <body>
@@ -14,15 +14,27 @@
     <script src="/cdn/base64.js"></script>
     <script src="/cdn/require.min.js"></script>
     <script>
-        let filename = location.search.split("=")[1];
-        let runFile = `pages/${filename}.js`;
-        let storageKey = `webdata#${runFile}`;
-        let webCache = localStorage.getItem(storageKey);
-        document.title = filename;
 
         let gitee = {
-            loadFile(runFile, call) {
-                fetch(`https://gitee.com/api/v5/repos/yanhui1993/webdata/contents/${runFile}`)
+
+            loadFile(file, call) {
+
+                let storageKey = `webdata#${file}`;
+                let cacheKey = `webdata#@${file}`;
+
+                let cache = localStorage.getItem(cacheKey);
+                if (cache) {
+                    call && call(cache);
+                    return;
+                }
+
+                let storage = localStorage.getItem(storageKey);
+                if (storage) {
+                    call && call(storage);
+                    return;
+                }
+
+                fetch(`https://gitee.com/api/v5/repos/yanhui1993/webdata/contents/${file}`)
                     .then(res => res.json())
                     .then(data => {
                         let content = data.content;
@@ -30,22 +42,16 @@
                         call && call(content);
                     });
             }
-        }
 
-        if (webCache) {
-            let localKey = `webdata#@${runFile}`;
-            let localCache = localStorage.getItem(localKey);
-            let data = localCache ? localCache : webCache;
-            start(data);
-        } else {
-            fetch(`https://gitee.com/api/v5/repos/yanhui1993/webdata/contents/${runFile}`)
-                .then(res => res.json())
-                .then(data => {
-                    let content = data.content;
-                    content && localStorage.setItem(storageKey, base64.decode(content));
-                    start(content);
-                });
-        }
+        };
+
+        let filename = location.search.split("=")[1];
+        document.title = filename;
+        let runFile = `pages/${filename}.js`;
+
+        gitee.loadFile(runFile, (content) => {
+            start(content);
+        });
 
         function start(data) {
             let script = document.createElement('script');
@@ -53,8 +59,6 @@
             script.append(data);
             document.body.appendChild(script);
         }
-
-
 
     </script>
 
