--- a/dev.html
+++ b/dev.html
@@ -10,6 +10,6 @@
 
 <div id="root"></div>
 
-<script src="/cdn/require.min.js" data-main="libs/min/main.min"></script>
+<script src="/cdn/require.min.js" data-main="libs/dev"></script>
 </body>
 </html>
