--- a/dev.html
+++ b/dev.html
@@ -10,6 +10,10 @@
 
 <div id="root"></div>
 
-<script src="/cdn/require.min.js" data-main="libs/dev"></script>
+<script>
+    let isProd = false;
+</script>
+<script src="/cdn/require.min.js" data-main="libs/main"></script>
+
 </body>
 </html>
