--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 
 <div id="root"></div>
-
+<script>
+    let isProd = true;
+</script>
 <script src="/cdn/require.min.js" data-main="libs/min/main.min"></script>
 </body>
 </html>
